--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"lodash": "^4.17.4",
 		"react": "16.0.0",
 		"react-native": "0.50.3",
+		"react-native-modalbox": "^1.4.2",
 		"react-native-router-flux": "^4.0.0-beta.22",
 		"react-redux": "^5.0.6",
+		"react-timer-mixin": "^0.13.3",
 		"redux": "^3.7.2",
 		"redux-persist": "^5.2.2",
 		"redux-thunk": "^2.2.0"
