--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
+		"@types/react-native": "^0.50.2",
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
 		"jest": "21.2.1",
