--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-	"name": "desafioGlobo",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"@redux-offline/redux-offline": "^2.2.0",
-		"axios": "^0.17.0",
-		"lodash": "^4.17.4",
-		"react": "16.0.0",
-		"react-native": "0.50.3",
-		"react-native-modalbox": "^1.4.2",
-		"react-native-router-flux": "^4.0.0-beta.22",
-		"react-redux": "^5.0.6",
-		"react-timer-mixin": "^0.13.3",
-		"redux": "^3.7.2",
-		"redux-thunk": "^2.2.0"
-	},
-	"devDependencies": {
-		"@types/react-native": "^0.50.2",
-		"babel-jest": "21.2.0",
-		"babel-preset-react-native": "4.0.0",
-		"jest": "21.2.1",
-		"react-test-renderer": "16.0.0"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "desafioGlobo",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@redux-offline/redux-offline": "^2.2.0",
+    "axios": "^0.17.0",
+    "lodash": "^4.17.4",
+    "react": "16.0.0",
+    "react-native": "0.50.3",
+    "react-native-modalbox": "^1.4.2",
+    "react-native-router-flux": "^4.0.0-beta.22",
+    "react-redux": "^5.0.6",
+    "react-timer-mixin": "^0.13.3",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "@types/react-native": "^0.50.2",
+    "babel-jest": "21.2.0",
+    "babel-preset-react-native": "4.0.0",
+    "jest": "21.2.1",
+    "moxios": "^0.4.0",
+    "react-test-renderer": "16.0.0",
+    "redux-mock-store": "^1.3.0"
+  },
+  "jest": {
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native|native-base|react-navigation|react-native-fabric|mobx-react)"
+    ]
+  }
 }
